<resources>
    <string translatable="false" name="app_name">Timeby</string>
    <string translatable="false" name="smssdk_app_key">8be7864566fc</string>
    <string translatable="false" name="smssdk_app_secret">8633b1b251d8a0ee021c20eef3d0534c</string>

    <string translatable="false" name="title_activity_main">MainActivity</string>
    <string translatable="false" name="title_activity_main_single">MainSingleActivity</string>
    <string translatable="false" name="title_activity_main_pk">MainPKActivity</string>
    <string translatable="false" name="title_activity_main_copper">MainCooperActivity</string>
    <string translatable="false" name="title_activity_notify">NotifyActivity</string>
    <string translatable="false" name="title_activity_friend">FriendActivity</string>
    <string translatable="false" name="title_activity_setting">SettingActivity</string>
    <string translatable="false" name="title_activity_login">LoginActivity</string>
    <string translatable="false" name="title_activity_register">RegisterActivity</string>
    <string translatable="false" name="title_activity_register_phone">RegisterPhoneActivity</string>
    <string translatable="false" name="title_activity_user_info">UserInfoActivity</string>
    <string translatable="false" name="title_activity_user_info_edit">UserInfoEditActivity</string>
    <string translatable="false" name="title_activity_reset_password">ResetPasswordActivity</string>
    <string translatable="false" name="title_activity_setting_notify">SettingNotifyActivity</string>
    <string translatable="false" name="title_activity_setting_share">SettingShareActivity</string>
    <string translatable="false" name="title_activity_setting_feedback">SettingFeedbackActivity</string>

    <string translatable="false" name="hello_world">Hello world!</string>

    <string translatable="false" name="setting_page_arrow_left">&#160;&#160;&#060;&#160;&#160;</string>
    <string translatable="false" name="setting_page_arrow_right">&#062;</string>
    <string translatable="false" name="setting_page_title">设 置</string>
    <string translatable="false" name="setting_page_bg_notific">后台提醒</string>
    <string translatable="false" name="setting_page_sound_effect">音效</string>
    <string translatable="false" name="setting_page_change_password">更改密码</string>
    <string translatable="false" name="setting_page_notify_time">提示时间</string>
    <string translatable="false" name="setting_page_share">分享应用</string>
    <string translatable="false" name="setting_page_feedback">意见反馈</string>

    <string translatable="false" name="select_task_type">请选择任务模式：</string>
    <string translatable="false" name="task_type_solo">单人</string>
    <string translatable="false" name="task_type_coop">合作</string>
    <string translatable="false" name="task_type_pk">PK</string>
    <string translatable="false" name="setting_page_logout">退出应用</string>

    <string translatable="false" name="login_reset">忘记密码?</string>

    <string translatable="false" name="friends_list">列 表</string>
    <string translatable="false" name="friends_winner">荣耀榜</string>
    <string translatable="false" name="friends_failure">机 奴</string>
    <string translatable="false" name="friends_actionbar_title">好 友</string>
    <string translatable="false" name="friends_search">添加联系人</string>

    <string translatable="false" name="title_activity_add_friend">AddFriendActivity</string>
    <string translatable="false" name="action_settings">Settings</string>
    <string translatable="false" name="title_activity_add_friends_by_maillist">AddFriendsByMaillistActivity</string>
    <string translatable="false" name="title_activity_conclude">ConcludeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
    <string translatable="false" name="title_activity_friends">FriendsActivity</string>
    <string translatable="false" name="login_register">注   册</string>
    <string translatable="false" name="login_user_hint">用户名/手机号</string>
    <string translatable="false" name="login_password_hint">输入密码</string>
    <string translatable="false" name="login_btn_submit">登  录</string>
    <string translatable="false" name="register_user_hint">输入用户名</string>
    <string translatable="false" name="register_password_hint">输入密码</string>
    <string translatable="false" name="register_password2_hint">再次输入密码</string>
    <string translatable="false" name="register_return">取消</string>
    <string translatable="false" name="register_next">下一步</string>
    <string translatable="false" name="register_phone_hint">输入手机号</string>
    <string translatable="false" name="register_phone_captcha_hint">验证码</string>
    <string translatable="false" name="register_phone_resent">重新发送(50秒)</string>
    <string translatable="false" name="message_sys">消  息</string>
    <string translatable="false" name="add_friend_from_contact">通讯录</string>

    <string translatable="false" name="title_activity_pie_chart">PieChart</string>
    <string translatable="false" name="title_activity_line_chart">LineChartActivity</string>
    <string translatable="false" name="title_activity_line_chart2">LineChart2Activity</string>
    <string translatable="false" name="title_activity_data_compared_with_last_week">DataComparedWithLastWeekActivity</string>
    <string translatable="false" name="title_activity_view_flipper">ViewFlipperActivity</string>

</resources>
