<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffe3"
    android:orientation="vertical">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="80dip">
        <TextView android:text="@string/setting_page_arrow_left" android:layout_width="wrap_content"
            android:id="@+id/setting_page_return"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="15dip"
            android:layout_centerVertical="true"
            android:textSize="32dip"
            />
        <TextView android:text="@string/setting_page_title" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="25dip"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="1">
        <TextView android:text="@string/setting_page_bg_notific" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="36dip"
            android:layout_centerVertical="true"
            android:textSize="23dip"
            />
        <ImageView
            android:id="@+id/switch_bg_bg_noti"
            android:src="@drawable/switch_bg"
            android:scaleType="fitXY"
            android:layout_width="68dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="26dip"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/switch_bg_cover_bg_noti"
            android:src="@drawable/switch_bg_cover"
            android:scaleType="fitXY"
            android:layout_width="68dip"
            android:layout_height="30dip"
            android:layout_alignLeft="@id/switch_bg_bg_noti"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/switch_button_bg_noti"
            android:src="@drawable/switch_button"
            android:scaleType="fitXY"
            android:layout_width="37dip"
            android:layout_height="30dip"
            android:layout_alignLeft="@id/switch_bg_bg_noti"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="1">
        <TextView android:text="@string/setting_page_sound_effect" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="36dip"
            android:layout_centerVertical="true"
            android:textSize="23dip"
            />
        <ImageView
            android:id="@+id/switch_bg_music_effect"
            android:src="@drawable/switch_bg"
            android:scaleType="fitXY"
            android:layout_width="68dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="26dip"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/switch_bg_cover_music_effect"
            android:src="@drawable/switch_bg_cover"
            android:scaleType="fitXY"
            android:layout_width="68dip"
            android:layout_height="30dip"
            android:layout_alignLeft="@id/switch_bg_music_effect"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/switch_button_music_effect"
            android:src="@drawable/switch_button"
            android:scaleType="fitXY"
            android:layout_width="37dip"
            android:layout_height="30dip"
            android:layout_alignLeft="@id/switch_bg_music_effect"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/setting_page_chan_pwd"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="1">
        <TextView android:text="@string/setting_page_change_password" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="36dip"
            android:layout_centerVertical="true"
            android:textSize="23dip"
            />
        <TextView android:text="@string/setting_page_arrow_right" android:layout_width="wrap_content"
            android:id="@+id/setting_page_chan_pwd_arrow"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dip"
            android:layout_centerVertical="true"
            android:textSize="32dip"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/setting_page_notify_time"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="1">
        <TextView android:text="@string/setting_page_notify_time" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="36dip"
            android:layout_centerVertical="true"
            android:textSize="23dip"
            />
        <TextView android:text="@string/setting_page_arrow_right" android:layout_width="wrap_content"
            android:id="@+id/setting_page_notify_time_arrow"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dip"
            android:layout_centerVertical="true"
            android:textSize="32dip"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/setting_page_feedback"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="1">
        <TextView android:text="@string/setting_page_feedback" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_marginLeft="36dip"
            android:layout_centerVertical="true"
            android:textSize="23dip"
            />
        <TextView android:text="@string/setting_page_arrow_right" android:layout_width="wrap_content"
            android:id="@+id/setting_page_feedback_arrow"
            android:layout_height="wrap_content"
            android:textColor="#adccad"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dip"
            android:layout_centerVertical="true"
            android:textSize="32dip"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="0dip"
        android:layout_weight="2">

    </RelativeLayout>


</LinearLayout>
